now, the /today route gets today's calories from the user_meals and meals databases

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,7 +28,9 @@
 }
 
 .listCardRight {
-  display: grid;
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
   place-items: center;
 }
 
