--- a/components/circular.module.css
+++ b/components/circular.module.css
@@ -6,12 +6,13 @@
     border-radius: 50%;
     position: relative;
     margin-left: 10px;
+    margin-right: 10px;
   }
   
   .innerCircle {
     color: white;
     text-align: center;
-      
+    padding: 20px 0px;
     width: 150px;
     height: 150px;
     border-radius: 50%;
