--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -96,10 +96,10 @@
 }
 .smallButton {
   justify-content: space-between;
-  align-items: center;
+  text-align: center;
   width: 250px;
   display: flex;
-  padding: 1rem 1.2rem;
+  padding: 1rem 0rem;
   border-radius: var(--border-radius);
   background: rgba(12, 230, 16, 0.348);
   border: 1px solid rgba(var(--card-border-rgb), 0);
@@ -118,10 +118,8 @@
   max-width: 30ch;
 }
 .smallButton div {
-  text-align: start;
-  font-size: 1.1rem;
-  line-height: 1.5;
-  max-width: 30ch;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 
@@ -178,7 +176,7 @@
 
 .center {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: relative;
   padding: 4rem 0;
