--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,7 +85,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    font-family: var(--font-mono);
+    font-family: Mona Sans, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
 
 }
 
@@ -98,4 +98,17 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+@font-face {
+  font-family: 'Mona Sans';
+  src:
+    url('/node_modules/mona-sans') format('woff2 supports variations'),
+    url('/node_modules/mona-sans') format('woff2-variations');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
+
+html {
+  font-family: 'Mona Sans';
 }
