--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,13 @@
   padding: 6rem;
   min-height: 100vh;
 }
+.scratcher {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  padding: 6rem;
+  min-height: 100vh;
+}
 .delete {
   background: red;
   border-radius: 10%;
@@ -85,12 +92,17 @@
   text-align: center;
 }
 .description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
+  font-family: var(--font-mono);
+}
+
+.natural {
+  margin-top: 1rem;
+  line-height: 1.15;
+  font-size: 1rem;
+  text-align: center;
   font-family: var(--font-mono);
 }
 
